--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,3 +1,26 @@
+<%# Breadcrumbs %>
+<% content_for :breadcrumbs do %>
+  <li>
+    <div class="flex items-center">
+      <svg class="w-6 h-6 text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path>
+      </svg>
+      <%= link_to "Companies", companies_path, class: "ml-1 text-sm font-medium text-gray-500 hover:text-blue-600 md:ml-2" %>
+    </div>
+  </li>
+  <li>
+    <div class="flex items-center">
+      <svg class="w-6 h-6 text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path>
+      </svg>
+      <span class="ml-1 text-sm font-medium text-gray-500 md:ml-2"><%= @company.name %></span>
+    </div>
+  </li>
+<% end %>
+
+<%# Page Title %>
+<% content_for :title, "#{@company.name} | StartupsOnRails" %>
+
 <div class="max-w-4xl mx-auto px-4 py-8">
   <div class="bg-white p-8 rounded-lg shadow-sm">
     <h1 class="text-3xl font-bold text-gray-900 mb-4"><%= @company.name %></h1>
