--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -69,7 +69,7 @@
         <h2 class="text-xl font-bold">Tech Stack</h2>
         
         <% if current_user && (current_user.admin? || current_user.id == @company.user_id) %>
-          <%= link_to edit_company_company_technologies_path(@company), class: "text-blue-600 hover:text-blue-800 flex items-center" do %>
+          <%= link_to edit_company_path(@company, anchor: "tech-stack"), class: "text-blue-600 hover:text-blue-800 flex items-center" do %>
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
               <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
             </svg>
@@ -80,7 +80,7 @@
       
       <% if @company.technologies.any? %>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-          <% @company.technologies.includes(:company_technologies).group_by { |t| t.category }.each do |category, techs| %>
+          <% @company.technologies.group_by { |t| t.category }.each do |category, techs| %>
             <div class="border rounded-md">
               <div class="bg-gray-50 px-4 py-2 border-b">
                 <h3 class="font-medium"><%= category %></h3>
@@ -99,13 +99,6 @@
                       
                       <span class="text-sm">
                         <%= link_to tech.name, technology_path(tech), class: "hover:text-blue-600" %>
-                        
-                        <% company_tech = @company.company_technologies.find_by(technology_id: tech.id) %>
-                        <% if company_tech && company_tech.proficiency_level != 'regular' %>
-                          <span class="text-xs text-gray-500 ml-1">
-                            (<%= company_tech.proficiency_level.humanize %>)
-                          </span>
-                        <% end %>
                       </span>
                     </li>
                   <% end %>
@@ -115,14 +108,7 @@
           <% end %>
         </div>
       <% else %>
-        <div class="text-center py-8 text-gray-500">
-          <p>No technologies added yet.</p>
-          <% if current_user && (current_user.admin? || current_user.id == @company.user_id) %>
-            <p class="mt-2">
-              <%= link_to "Add technologies", edit_company_company_technologies_path(@company), class: "text-blue-600 hover:underline" %>
-            </p>
-          <% end %>
-        </div>
+        <p class="text-gray-500 italic">No technologies listed</p>
       <% end %>
     </div>
   </div>
